--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="text/javascript" src="psk-http-client.js"></script>
+    <script type="text/javascript" src="lib/psk-abstract-client.js"></script>
 </head>
 <body>
 
